# rust-app

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  package-lock.json
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: film_modal.rs  footer.rs  header.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs
static/: index.html  tailwind.css
static/assets/dioxus/: rusty-films.js  rusty-films_bg.wasm
static/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
