[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
wasm-logger = "0.2.0"
uuid = { version = "1.6.1", features = ["serde", "v4", "js"] }
reqwest = { version = "0.11.23", features = ["json"] }
web-sys = "0.3.67"
serde = { version = "1.0.195", features = ["derive"] }

# shared
shared = { path = "../shared" }
