[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.7", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"
serde = "1.0.195"
serde_json = "1.0.111"
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["serde", "v4", "js"] }

shared = { path = "../../shared", features = ["backend"]}

[dev-dependencies]
actix-rt = "2.9.0"
