[package]
name = "sos-rust-app-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# static
actix-files = "0.6.5"

# server
actix-web = "4.3.1"
shuttle-actix-web = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = "1.26.0"

# logs
tracing = "0.1.40"

# database
shuttle-shared-db = {version = "0.36.0", features = ["postgres"]}
sqlx = { version = "0.7.3", default-features = false, features = [
	"tls-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"json"
]}

# workspace libraries
api-lib = { path = "../lib" }